# Model-Drift-Monitor

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  streamlit_app.py
src/model_drift_monitor/: __init__.py  baseline.py  drift.py  performance.py  reporting.py  synthetic.py  visualization.py
tests/: test_baseline.py  test_drift.py  test_performance.py
